--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,7 @@ input[type="number"]::-webkit-outer-spin-button:hover:after {
   background-color: rgb(255, 255, 255, 0.6);
   padding: 10px;
   border-radius: 20px;
+  width: 350px;
 }
 
 .cards {
@@ -144,7 +145,6 @@ input[type="number"]::-webkit-outer-spin-button:hover:after {
 
 .card-name {
   width: 100%;
-  white-space: nowrap;
   overflow-y: auto;
   text-overflow: ellipsis;
   text-align: center;
@@ -153,7 +153,6 @@ input[type="number"]::-webkit-outer-spin-button:hover:after {
 
 .code-name {
   width: 100%;
-  white-space: nowrap;
   overflow-y: auto;
   text-overflow: ellipsis;
   text-align: center;
