--- a/styles.css
+++ b/styles.css
@@ -193,15 +193,28 @@ input[type="number"]::-webkit-outer-spin-button:hover:after {
   opacity: 1 !important;
 }
 
+.selector {
+      background-color: rgb(255, 255, 255, 0.6);
+    max-width: 50%;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+    border-radius: 20px;
+    font-weight: bold;
+    margin-right: 5px;
+}
+
 .input-group {
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 1em;
   position: relative;
+  width: 50%;
 }
 
 #input {
+  display: none;
   width: 80%;
   padding: 0.5em;
   border-radius: 20px 0px 0px 20px;
@@ -266,6 +279,7 @@ button#btn {
   padding: 10px;
   border-radius: 20px;
   font-weight: bold;
+  margin-right: 5px;
 }
 
 body {
